--- a/Table_Booking/index.html
+++ b/Table_Booking/index.html
@@ -101,9 +101,9 @@
                                 consectetur adipisicing elit. Ab, quae, placeat incidunt deleniti voluptatum eum maxime
                                 numquam tenetur veniam officia nulla ducimus obcaecati ad iusto quos corporis maiores
                                 laboriosam quo!</p>
-                            <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">Book A
+                            <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3 mt-2 animated slideInLeft">Book A
                                 Table</a>
-                            <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3 animated slideInLeft">Book A Room</a>
+                            <a href="" class="btn btn-primary py-sm-3 px-sm-5 me-3  mt-2 slideInLeft">Book A Room</a>
                         </div>
                         <div class="col-lg-5 text-center text-lg-end overflow-hidden" style="float: right;">
                             <img class="img-fluid"
