--- a/Table_Booking/public/contact.html
+++ b/Table_Booking/public/contact.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="favicon.ico" rel="icon">
+    <link href="https://www.favicon.cc/" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -229,6 +229,7 @@
         </div>
 
         <!-- JavaScript Libraries -->
+        <script src="../js/main.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
         <script src="../lib/wow/wow.min.js"></script>
@@ -239,7 +240,7 @@
         <script src="../lib/tempusdominus/js/moment.min.js"></script>
         <script src="../lib/tempusdominus/js/moment-timezone.min.js"></script>
         <script src="../lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-        <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+
 
 
         <script>
@@ -279,7 +280,6 @@
 
 
         <!-- Template Javascript -->
-        <script src="../js/main.js"></script>
 </body>
 
 </html>
