--- a/Table_Booking/public/about.html
+++ b/Table_Booking/public/about.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="https://www.favicon.cc/" rel="icon">
+<!--     <link href="https://www.favicon.cc/" rel="icon"> -->
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
